# SpectralHook

./: CMakeLists.txt  README.md  entrypoint.cpp  spectralhook.cpp
Hooks/: ClientModeCreateMove.cpp  Hooks.h
Utils/: FindPattern.h  Interfaces.h  NetVars.h  Virtuals.h
Utils/Logger/: CGameConsoleLogger.cpp  CGameConsoleLogger.h  ILogger.h
include/tf2/Classes/: CBaseEntity.h  CBaseHandle.h  ClientClass.h  RecvTable.h  Vector.h
include/tf2/Definitions/: Const.h
include/tf2/Interfaces/: IBaseClientDll.h  IClientEntityList.h  IClientMode.h  ICvar.h  IEngineClient.h  IPanel.h  ISurface.h
include/tf2/Structures/: CUserCmd.h  Color.h  PlayerInfo.h
include/vmthook/: vmthook.h
